			<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
				<modelVersion>4.0.0</modelVersion>
				<groupId>com.practise.raja</groupId>
				<artifactId>SeleniumConcepts</artifactId>
				<version>0.0.1-SNAPSHOT</version>
				<dependencies>
				
					<dependency>
					    <groupId>junit</groupId>
					    <artifactId>junit</artifactId>
					    <version>4.12</version>
	    			</dependency>
				
					<dependency>
					    <groupId>io.cucumber</groupId>
					    <artifactId>cucumber-junit</artifactId>
					    <version>4.7.1</version>
					</dependency>

					<dependency>
						<groupId>io.cucumber</groupId>
						<artifactId>cucumber-picocontainer</artifactId>
						<version>4.7.1</version>
					</dependency>
					<dependency>
						<groupId>org.seleniumhq.selenium</groupId>
						<artifactId>selenium-java</artifactId>
						<version>3.5.3</version>
					</dependency>
					<dependency>
					    <groupId>io.cucumber</groupId>
					    <artifactId>cucumber-java</artifactId>
					    <version>4.7.1</version>
					    <scope>test</scope>
					</dependency>
					 
				</dependencies>
			    
			
			<properties>
			   <src.tst.rsors>com/qa/features</src.tst.rsors>
			</properties>
			
			
				<build>
				 
					<plugins>
		<!--                 <plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>build-helper-maven-plugin</artifactId>
						<version>1.7</version>
						<executions>
							<execution>
								<id>add-source</id>
								<phase>generate-sources</phase>
								<goals>
									<goal>add-source</goal>
								</goals>
								<configuration>
									<sources>
										<source>src/test/java/</source>
										<source>src/test/resources/</source>
										<source>src/main/resources/</source>
								    </sources>
								</configuration>
							</execution>
						</executions>
					</plugin>
		 -->
						<plugin>
						    <groupId>org.apache.maven.plugins</groupId>
						    <artifactId>maven-surefire-plugin</artifactId>
						    <version>2.22.0</version>
						    <configuration>
							    
	        					<!-- 
	        					<parallel>all</parallel>
	        					<threadCount>4</threadCount> 
	        					<useUnlimitedThreads>true</useUnlimitedThreads> 
	        					<forkCount>2</forkCount>
								<reuseForks>true</reuseForks>
								<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
								
								Parallel execution can be done with single jvm and multiple threads, 
								by default there is single jvm,so we just have to mention parallel and  threadCount
								<parallel>all</parallel>
								<threadCount>4</threadCount>
								Parallel execution can also be done with multiple jvm and multiple threads, 
								by default the jvm can't be resued but we can mention to resued them instead of creating new 
								<forkCount>2</forkCount>
								<reuseForks>true</reuseForks>
								
								This can be observed in logs, see for multiple ports numbers , which wont be displayed 
								-->
								<forkCount>2</forkCount>
								<includes>
									<include>**/*TestRunner.java</include>
								</includes>
								<excludes>
								    <exclude> **/WebTableTestRunner.java</exclude>
								</excludes> 
						     
								
							</configuration>
							</plugin>
						
						<plugin>
							<artifactId>maven-compiler-plugin</artifactId>
							<version>3.1</version>
							<configuration>
								<source>1.8</source>
								<target>1.8</target>
								<fork>true</fork>
								<executable>C:\Program Files (x86)\Java\jdk1.8.0_211\bin\javac</executable>
							</configuration>
						</plugin>
						
					</plugins>
				</build>
			</project>









<!-- <testFailureIgnore>true</testFailureIgnore>
     <suiteXmlFiles>
       <suiteXmlFile>testng.xml</suiteXmlFile>
     </suiteXmlFiles> 
	
	 -->
	 
	 
	 
	 						<!-- 
									<forkCount>3</forkCount>
								 	<reuseForks>true</reuseForks>
									
									<parallel>classes</parallel>
									<forkMode>perthread</forkMode>
									<threadCount>3</threadCount>
									 -->
			
	 
	 <!-- 
	 
	 <plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-plugin</artifactId>
							<version>2.20</version>
								<configuration>
									
									<parallel>classes</parallel>
									<threadCount>3</threadCount>
									
									<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
									<includes>
										<include>**/*TestRunner.java</include>
									</includes>
								</configuration>
						</plugin>
			
			
			  				<configuration>
						        <parallel>classes</parallel>
						        <useUnlimitedThreads>true</useUnlimitedThreads>
						    	<includes>
										<include>FileUploadTestRunner.java</include>
								</includes>
						    </configuration>
					
	 
	  -->